Add site header

--- a/index.html
+++ b/index.html
@@ -11,11 +11,39 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 
-  <!-- Stylesheet aaa-->
+  <!-- Stylesheet-->
   <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+
+  <!-- SITE_HEADER -->
+  <header class="site-header">
+    <div class="site-header-container container">
+      <a class="site-header-logo" href="#">
+        <img class="site-header-logo-img" src="img/apple-logo.svg" alt="site-header-logo-img" width="35" height="42">
+      </a>
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#" >Home</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#" >About</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#" >Offers</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#" >Services</a>
+          </li>
+        </ul>
+      </nav>
+      <form class="search-form"  action="https://echo.htmlacademy.ru" method="GET">
+        <input class="search-form-input" type="search" name="search" placeholder="How can we help you?" aria-label="search" required>
+      </form>
+    </div>
+  </header>
 
 <script src="js/main.js"></script>
 </body>
