--- a/index.html
+++ b/index.html
@@ -78,6 +78,30 @@
     </ul>
     </div>
   </section>
+  <!-- PROMO -->
+  <section class="site-promo">
+    <div class="site-promo-container container">
+      <div class="site-promo-lead-cta lead-cta">
+        <h2 class="lead-cta-heading">Nike Sport Band.<br> Flexible.<br>
+          Breathable.</h2>
+        <p class="lead-cta-text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
+        <a class="button" href="#">Buy now</a>
+      </div>
+      <img class="promo-img" src="img/watch-in-hand.jpg" alt="site promo img" width="400" height="600"
+        src="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x ">
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="footer-lead-cta lead-cta">
+      <h2 class="lead-cta-heading">Take control of your health. </h2>
+      <p class="lead-cta-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.</p>
+      <a class="button" href="#">WExplore features</a>
+    </div>
+  </div>
+</footer>
 </div>
 <script src="js/main.js"></script>
 </body>
