Add minifier style and site promo img srcset

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-
+<!-- STYLE-MINIFIER -->
+<link rel="stylesheet" href="style/style.min.css">
   <!-- Stylesheet-->
-  <link rel="stylesheet" href="style/normalize.css">
-  <link rel="stylesheet" href="style/style.css">
+  <!-- <link rel="stylesheet" href="style/normalize.css">
+  <link rel="stylesheet" href="style/style.css"> -->
 </head>
 <body>
 
@@ -88,7 +89,7 @@
         <a class="button" href="#">Buy now</a>
       </div>
       <img class="promo-img" src="img/watch-in-hand.jpg" alt="site promo img" width="400" height="600"
-        src="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x ">
+        srcset="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x ">
     </div>
   </section>
 
